--- a/index.Html
+++ b/index.Html
@@ -3,7 +3,7 @@
 <head>
     <title>ASSASSIN'S Encryption</title>
     <style>
-        /* Background for the entire page */
+        /* Background for the entire page..*/
         body {
             background-image: url("https://mcdn.wallpapersafari.com/medium/43/12/Vh8dFx.jpg");
             font-family: monaco;
